# os-vm-expire-horizon-plugin

./: AUTHORS  ChangeLog  MANIFEST.in  README.rst  _90_vmexpires.py  babel-django.cfg  babel-djangojs.cfg  setup.cfg  setup.py  test.py
vmexpires/: dashboard.py
vmexpires/expires/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
vmexpires/expires/api/: expires.py
vmexpires/expires/templates/expires/: _extend.html  extend.html  index.html
vmexpires/static/vmexpires/js/: vmexpires.js
vmexpires/templates/vmexpires/: base.html
